--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,21 +23,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "12.2.15",
-    "@angular/cdk": "12.2.13",
-    "@angular/common": "12.2.15",
-    "@angular/compiler": "12.2.15",
-    "@angular/core": "12.2.15",
-    "@angular/forms": "12.2.15",
-    "@angular/material": "12.2.13",
-    "@angular/platform-browser": "12.2.15",
-    "@angular/platform-browser-dynamic": "12.2.15",
-    "@angular/platform-server": "12.2.15",
-    "@angular/router": "12.2.15",
-    "@nguniversal/express-engine": "12.1.3",
-    "@ngxs/devtools-plugin": "3.7.2",
-    "@ngxs/router-plugin": "^3.7.2",
-    "@ngxs/store": "3.7.2",
+    "@angular/animations": "13.1.3",
+    "@angular/cdk": "13.1.3",
+    "@angular/common": "13.1.3",
+    "@angular/compiler": "13.1.3",
+    "@angular/core": "13.1.3",
+    "@angular/forms": "13.1.3",
+    "@angular/material": "13.1.3",
+    "@angular/platform-browser": "13.1.3",
+    "@angular/platform-browser-dynamic": "13.1.3",
+    "@angular/platform-server": "13.1.3",
+    "@angular/router": "13.1.3",
+    "@nguniversal/express-engine": "13.0.2",
     "@swimlane/ngx-charts": "17.0.0",
     "chart.js": "2.9.4",
     "class-transformer": "0.3.1",
@@ -51,40 +48,26 @@
     "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^12.2.15",
-    "@angular-devkit/schematics": "^12.2.15",
-    "@angular-eslint/builder": "12.7.0",
-    "@angular-eslint/eslint-plugin": "12.7.0",
-    "@angular-eslint/eslint-plugin-template": "12.7.0",
-    "@angular-eslint/schematics": "12.7.0",
-    "@angular-eslint/template-parser": "12.7.0",
-    "@angular/cli": "12.2.15",
-    "@angular/compiler-cli": "12.2.15",
-    "@angular/language-service": "12.2.15",
-    "@cypress/webpack-preprocessor": "^5.5.0",
+    "@angular-devkit/build-angular": "13.1.4",
+    "@angular-devkit/schematics": "13.1.4",
+    "@angular/cli": "13.1.4",
+    "@angular/compiler-cli": "13.1.3",
+    "@angular/language-service": "13.1.3",
+    "@cypress/webpack-preprocessor": "5.5.0",
     "@nguniversal/builders": "9.1.1",
     "@types/chart.js": "2.9.29",
     "@types/express": "4.17.0",
     "@types/jasmine": "3.6.0",
     "@types/jasminewd2": "2.0.3",
-    "@types/jest": "^26.0.20",
+    "@types/jest": "26.0.20",
     "@types/node": "12.11.1",
-    "@typescript-eslint/eslint-plugin": "3.10.1",
-    "@typescript-eslint/parser": "3.10.1",
     "codelyzer": "6.0.0",
-    "cypress": "^6.4.0",
-    "eslint": "6.8.0",
-    "eslint-config-airbnb-typescript": "9.0.0",
-    "eslint-config-prettier": "6.11.0",
-    "eslint-plugin-import": "2.22.0",
-    "eslint-plugin-jasmine": "4.1.1",
-    "eslint-plugin-prettier": "3.1.4",
-    "eslint-plugin-protractor": "2.1.1",
+    "cypress": "6.4.0",
     "husky": "4.2.5",
     "jasmine-core": "3.6.0",
     "jasmine-spec-reporter": "5.0.0",
-    "jest": "^26.6.3",
-    "jest-preset-angular": "^8.3.2",
+    "jest": "26.6.3",
+    "jest-preset-angular": "8.3.2",
     "lint-staged": "10.2.11",
     "prettier": "2.0.5",
     "protractor": "7.0.0",
@@ -95,7 +78,7 @@
     "stylelint-scss": "4.1.0",
     "ts-node": "8.3.0",
     "tslint": "6.1.0",
-    "typescript": "4.3.5"
+    "typescript": "4.5.5"
   },
   "jest": {
     "preset": "jest-preset-angular",
