--- a/backend-new/package.json
+++ b/backend-new/package.json
@@ -23,14 +23,15 @@
   "dependencies": {
     "@nestjs/common": "8.2.6",
     "@nestjs/core": "8.2.6",
+    "@nestjs/cqrs": "8.0.1",
     "@nestjs/platform-express": "8.2.6",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
-    "rxjs": "7.1.0"
+    "rxjs": "7.2.0"
   },
   "devDependencies": {
     "@nestjs/cli": "8.2.0",
-    "@nestjs/schematics": "7.1.3",
+    "@nestjs/schematics": "7.3.1",
     "@nestjs/testing": "8.2.6",
     "@types/express": "4.17.8",
     "@types/jest": "26.0.15",
@@ -48,7 +49,7 @@
     "ts-loader": "8.0.8",
     "ts-node": "9.0.0",
     "tsconfig-paths": "3.9.0",
-    "typescript": "4.0.5"
+    "typescript": "4.5.5"
   },
   "jest": {
     "moduleFileExtensions": [
