--- a/backend-new/package.json
+++ b/backend-new/package.json
@@ -22,12 +22,16 @@
   },
   "dependencies": {
     "@nestjs/common": "8.2.6",
+    "@nestjs/config": "1.2.0",
     "@nestjs/core": "8.2.6",
     "@nestjs/cqrs": "8.0.1",
     "@nestjs/platform-express": "8.2.6",
+    "@nestjs/typeorm": "8.0.3",
+    "pg": "8.7.3",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
-    "rxjs": "7.2.0"
+    "rxjs": "7.2.0",
+    "typeorm": "0.2.41"
   },
   "devDependencies": {
     "@nestjs/cli": "8.2.0",
@@ -35,12 +39,13 @@
     "@nestjs/testing": "8.2.6",
     "@types/express": "4.17.8",
     "@types/jest": "26.0.15",
-    "@types/node": "14.14.6",
+    "@types/node": "16.0.0",
     "@types/supertest": "2.0.10",
     "@typescript-eslint/eslint-plugin": "4.6.1",
     "@typescript-eslint/parser": "4.6.1",
     "eslint": "7.12.1",
     "eslint-config-prettier": "7.2.0",
+    "eslint-plugin-import": "2.25.4",
     "eslint-plugin-prettier": "3.1.4",
     "jest": "26.6.3",
     "prettier": "2.1.2",
